# Qt-Chat

./: .gitignore  CMakeLists.txt
resources/: app.qrc
resources/web/: chat.html
src/: MainWindow.cpp  MainWindow.h  main.cpp
src/api/: GroqClient.cpp  GroqClient.h
src/db/: ConversationStore.cpp  ConversationStore.h
src/models/: Message.h
src/ollama/: OllamaDialog.cpp  OllamaDialog.h  OllamaManager.cpp  OllamaManager.h
src/theme/: Theme.h  ThemeDialog.cpp  ThemeDialog.h  ThemeManager.cpp  ThemeManager.h
